--- a/webapp/package.json
+++ b/webapp/package.json
@@ -1,10 +1,10 @@
 {
   "private": true,
   "scripts": {
-    "build": "NODE_OPTIONS=--openssl-legacy-provider webpack --mode=production",
-    "build:watch": "NODE_OPTIONS=--openssl-legacy-provider webpack --mode=production --watch",
-    "debug": "NODE_OPTIONS=--openssl-legacy-provider webpack --mode=none",
-    "debug:watch": "NODE_OPTIONS=--openssl-legacy-provider webpack --mode=development --watch",
+    "build": "webpack --mode=production",
+    "build:watch": "webpack --mode=production --watch",
+    "debug": "webpack --mode=none",
+    "debug:watch": "webpack --mode=development --watch",
     "lint": "ESLINT_USE_FLAT_CONFIG=false eslint --ignore-pattern node_modules --ignore-pattern dist --ext .js --ext .jsx --ext tsx --ext ts . --quiet --cache",
     "fix": "ESLINT_USE_FLAT_CONFIG=false eslint --ignore-pattern node_modules --ignore-pattern dist --ext .js --ext .jsx --ext tsx --ext ts . --quiet --fix --cache",
     "test": "jest --forceExit --detectOpenHandles --verbose",
